--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,11 @@
       <div class="inner">
 
         <header>
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-          <h2>{{ page.description | default: site.tagline | default: site.description | default: site.github.project_tagline }}</h2>
+          <a href="/">
+            <img class="logo" src="{{ site.logo | relative_url }}" alt="Logo">
+            <h1>{{ site.title | default: site.github.repository_name }}</h1>
+            <h2>{{ page.description | default: site.tagline | default: site.description | default: site.github.project_tagline }}</h2>
+          </a>
         </header>
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
